public/styles.css
/* || RESET */
*,
*::after,
*::before {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

img,
picture,
video {
    display: block;
    max-width: 100%;
    height: auto;
}

input,
button,
textarea,
select {
    font: inherit;
    color: inherit;
    background: none;
    border-color: transparent;
}

a {
    text-decoration: none;
    color: inherit;
}

ul,
ol {
    list-style-type: none;
}

/* || VARIABLES */

:root {
    /* FONTS */
    --header-font: 'Candal';
    --font: 'Rubik'; 

    /* COLORS */
    --black: rgb(20, 10, 31);
    --background: rgba(226, 233, 195, 0.45);
    --light: rgb(226, 233, 195); 
    --green: rgb(92, 123, 20);
    --orange: rgb(238, 136, 47);
    --red: rgb(193, 51, 61);
    --white: rgb(255, 255, 255);

    /* BORDERS */
    --BORDERS: 1.5px solid var(--BORDER-COLOR);
    --BORDER-RADIUS: .75rem;
    --BTN-BORDER-RADIUS: .5rem;

    /* SHADOWS */
    --BOX-SHADOW: -.25rem .25rem .5rem var(--black);

    /* STANDARD PADDING */
    --PADDING-TEXT: .5rem .75rem;
    --PADDING-HEADER: .25rem .75rem;
    --PADDING-BOX: 1rem;

    /* STANDARD MARGIN */
    --MARGIN: 1rem;
    /* CHANGE TO CLAMP LATER! */

    /*  ==================
        ==================
        confirm the above styling before submitting
        REMOVE THIS COMMENT
        ==================
        ================== */
}

@font-face {
    font-display: swap;
    font-family: "Candal";
    src: url("./fonts/Candal/Candal-Regular.ttf"); 
}
@font-face {
    font-display: swap;
    font-family: "Rubik";
    src: url("./fonts/Rubik/Rubik-VariableFont_wght.ttf"); 
}

/*  ==================
    ==================
        || STYLES || 
    ==================
    ==================*/


/* || TEXT || */
.header {
    font-family: var(--header-font);
    padding: var(--PADDING-HEADER)
}

.text {
    padding: var(--PADDING-TEXT);
}

.light-text {
    color: var(--light);
}

/* || RECIPES || */

.recipe-card {
    text-align: center;
    width: 75dvw;
}

.ingredient-list, .directions {
    text-align: left;
    padding-left: 2rem;
    list-style-type: circle; /* will be updating to be checkboxes */
}


/* || SECTIONS || */

body {
    background-color: var(--background);
    font-family: var(--font);
    color: var(--black);
    min-height: 100dvh;
    display: grid;
    grid-template-rows: auto 1fr auto;
    grid-template-areas: 
        "header"
        "content"
        "footer";
}

.top-header{
    background-color: var(--green);
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    /* margin-bottom: 1rem; */
    grid-area: header;
    padding: 0 3rem;
}

.logo { 
    height: 4rem;
    width: auto;
}

/* || MOBILE HAMBURGER MENU || */

.navigation {
    display: none;
    padding: 1rem 2rem 1rem 0;
}

.hamburger {
    height: auto;
    width: auto;
    display: inline-block;
    position: absolute;
    right: 2rem;
    top: auto;
}

.hamburger img {
    width: 2rem;
    height: auto;
    display: block;
}

.top-header a {
    float: center;
    padding: var(--PADDING-TEXT);
} 


/* content */
.content {
    display: grid;
    justify-items: center;
    grid-area: content;
}

.container {
    display: grid;
    padding: var(--PADDING-TEXT);
    box-shadow: var(--BOX-SHADOW);
    margin: var(--MARGIN);
    max-width: 600px;
}

.tile {
    margin: var(--MARGIN);
    border-radius: var(--BORDER-RADIUS);
    padding: var(--PADDING-TEXT);
    background-color: var(--light);
    text-align: center;
    border: 1px solid var(--black);
}

.main {
    background-color: var(--orange);
    margin: var(--MARGIN);
    border-radius: var(--BORDER-RADIUS);
}

.tips {
    background-color: var(--red);
    margin: var(--MARGIN);
    border-radius: var(--BORDER-RADIUS);
    text-align: center;
}

.footer {
    background-color: var(--green);
    text-align: center;
    padding: var(--PADDING-BOX);
    width: 100dvw;
    grid-area: footer;
}

/* || BUTTONS || */

.button {
    background-color: var(--green);
    padding: var(--PADDING-TEXT);
    border-radius: var(--BTN-BORDER-RADIUS);
    color: var(--light);
    font-family: var(--header-font);
}

/* || LARGER SCREENS || */
@media only screen and (min-width: 768px){
    :root {
        /* STANDARD MARGIN */
        --MARGIN: 1.5rem;
    }    
    .main, .tip-tiles {
        display: flex;
        flex-direction: row;
        justify-items: stretch;
    }
    .container {
        max-width: 75dvw;
    }
    .recipe-container, .tips {
        display: block;
        max-width: 75dvw;
    }
    .recipe-tiles {
        display: grid;
        grid-template-columns: 1fr 2fr;
        justify-items: stretch;
    }

    .recipe-list-tile {
        display: grid;
        grid-template-columns: 1fr 1fr;
        gap: 2rem;
        justify-content: space-around;
    }
    
    .navigation {
    display: block !important;
    }
    
    .hamburger {
        display: none;
    }

} 

